-added logic for button handling -added email password activity -added google signin activity -layout fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FirebaseLogin"
+            android:label="Account"
+            android:theme="@style/AppTheme.Fullscreen" />
+        <activity android:name=".EmailPasswordActivity" />
+        <activity android:name=".GoogleSignInActivity"></activity>
     </application>
 
 </manifest>
