+new search game activity -hide navbar +retro colors (black and white theme) +icon changes on main menu +mixed changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,16 @@
             android:theme="@style/AppTheme.Fullscreen" />
         <activity android:name=".EmailPasswordActivity" />
         <activity android:name=".GoogleSignInActivity" />
-        <activity android:name=".LiveMaps"
+        <activity
+            android:name=".LiveMaps"
             android:label="Live Maps"
-            android:theme="@style/AppTheme.Fullscreen"></activity>
+            android:theme="@style/AppTheme.Fullscreen" />
+        <activity
+            android:name=".GameSearch"
+            android:theme="@style/AppTheme.Fullscreen"
+            android:label= "@string/game_page">
+
+        </activity>
     </application>
 
 </manifest>
