--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,18 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        disable 'MissingTranslation'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // MapBox
-    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.0@aar') {
-        transitive = true
-    }
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.11.0'
-    implementation('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.11.0') {
-        transitive = true
-    }
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.11.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -45,5 +44,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
