+added tools activity. +implemented shared preferences to save app states. +added logic to switch on of sound. +minor fixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,11 @@
             android:theme="@style/AppTheme.Fullscreen" />
         <activity
             android:name=".GameSearch"
-            android:theme="@style/AppTheme.Fullscreen"
-            android:label= "@string/game_page">
-
+            android:label="@string/game_page"
+            android:theme="@style/AppTheme.Fullscreen"></activity>
+        <activity android:name=".ToolsActivity"
+            android:label="@string/tools_act"
+            android:theme="@style/AppTheme.Fullscreen">
         </activity>
     </application>
 
