--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     // Google Sign In SDK (only required for Google Sign In)
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
-
+    //Room Database
+    implementation "android.arch.persistence.room:runtime:1.0.0-beta2"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
     compile 'com.squareup.picasso:picasso:2.5.2'
     //compile 'com.google.android.gms:play-services-auth:11.8.0'
     testImplementation 'junit:junit:4.12'
@@ -44,6 +46,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
