--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,14 @@ android {
     lintOptions {
         disable 'MissingTranslation'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // MapBox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.11.0'
@@ -36,16 +40,17 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
     //Room Database
-    implementation "android.arch.persistence.room:runtime:1.0.0-beta2"
+    implementation 'android.arch.persistence.room:runtime:1.0.0-beta2'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
     compile 'com.squareup.picasso:picasso:2.5.2'
     //compile 'com.google.android.gms:play-services-auth:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
+    //Alert Dialog Impl
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
 
 
