--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,13 +44,23 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
     compile 'com.squareup.picasso:picasso:2.5.2'
     //compile 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:3.1.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.google.firebase:firebase-firestore:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
+
     //Alert Dialog Impl
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+
 }
 
 
