--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Fullscreen">
             <intent-filter>
@@ -24,24 +24,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FirebaseLogin"
+            android:name=".Activity.FirebaseLogin"
             android:label="Account"
             android:theme="@style/AppTheme.Fullscreen" />
-        <activity android:name=".EmailPasswordActivity" />
-        <activity android:name=".GoogleSignInActivity" />
+        <activity android:name=".Activity.EmailPasswordActivity" />
+        <activity android:name=".Activity.GoogleSignInActivity" />
         <activity
-            android:name=".LiveMaps"
-            android:label="Live Maps"
+            android:name=".Activity.LiveMaps"
+            android:label="@string/livemaps_header"
             android:theme="@style/AppTheme.Fullscreen" />
         <activity
-            android:name=".GameSearch"
+            android:name=".Activity.GameSearch"
             android:label="@string/game_page"
             android:theme="@style/AppTheme.Fullscreen" />
         <activity
-            android:name=".ToolsActivity"
+            android:name=".Activity.ToolsActivity"
             android:label="@string/tools_act"
             android:theme="@style/AppTheme.Fullscreen"></activity>
-        <activity android:name=".ChatActivity"></activity>
+        <activity
+            android:name=".Activity.ChatActivity"
+            android:label ="@string/chat_header"
+            android:theme="@style/AppTheme.Fullscreen">
+        </activity>
     </application>
 
 </manifest>
