--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     //Room Database
     implementation 'android.arch.persistence.room:runtime:1.0.0-beta2'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     //compile 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.firebaseui:firebase-ui-firestore:3.1.0'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
