--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     defaultConfig {
         applicationId "com.adwitiya.cs7cs3.towerpower"
         minSdkVersion 21
+        //noinspection OldTargetApi
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -35,24 +36,36 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     // Google Sign In SDK (only required for Google Sign In)
+    //noinspection GradleDependency
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
     //Room Database
+    //noinspection GradleDependency
     implementation 'android.arch.persistence.room:runtime:1.0.0-beta2'
+    //noinspection GradleDependency
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     //compile 'com.google.android.gms:play-services-auth:11.8.0'
+    //noinspection GradleDependency
     implementation 'com.firebaseui:firebase-ui-firestore:3.1.0'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-storage:11.8.0'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-auth:11.8.0'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //noinspection GradleDependency
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    //noinspection GradleDependency
     implementation 'com.google.android.gms:play-services-location:11.8.0'
 
     //Alert Dialog Impl
