--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Fullscreen">
             <intent-filter>
@@ -24,25 +24,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.FirebaseLogin"
+            android:name=".activities.FirebaseLogin"
             android:label="Account"
             android:theme="@style/AppTheme.Fullscreen" />
-        <activity android:name=".Activity.EmailPasswordActivity" />
-        <activity android:name=".Activity.GoogleSignInActivity" />
+        <activity android:name=".activities.EmailPasswordActivity" />
+        <activity android:name=".activities.GoogleSignInActivity" />
         <activity
-            android:name=".Activity.LiveMaps"
+            android:name=".activities.LiveMaps"
             android:label="@string/livemaps_header"
             android:theme="@style/AppTheme.Fullscreen" />
         <activity
-            android:name=".Activity.GameSearch"
+            android:name=".activities.GameSearch"
             android:label="@string/game_page"
             android:theme="@style/AppTheme.Fullscreen" />
         <activity
-            android:name=".Activity.ToolsActivity"
+            android:name=".activities.ToolsActivity"
             android:label="@string/tools_act"
-            android:theme="@style/AppTheme.Fullscreen"></activity>
+            android:theme="@style/AppTheme.Fullscreen" />
         <activity
-            android:name=".Activity.ChatActivity"
+            android:name=".activities.ChatActivity"
             android:label ="@string/chat_header"
             android:theme="@style/AppTheme.Fullscreen">
         </activity>
